--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<nav></nav>
+  <a href = "home">Beranda</a>
+  <a href = "history">Sejarah</a>
+  <a href = "contact">Kontak</a>
 <h1>diary</h1>
 <p>aku sedang sekolah di jenjang SMA sambil merakit karir untuk ke jenjang selanjutnya</p>
 <b>jaket bulu itu sangat tebal</b>
+<nav></nav>
